# taxes

./: .gitignore  CLAUDE.md  Makefile  README.md  cache.py  cache_utils.py  company_cache.xml  country_cache.xml  currency.py  date_utils.py  dividends_furs.py  dividends_furs.xml  error_utils.py  file_utils.py  finance.py  gains.py  ibkr.py  interest.py  isin_utils.py  network_utils.py  pyproject.toml  requirements.txt  revolut.py  saxobank.py  taxes.py  taxpayer.py  taxpayer_fake.xml  xml_output.py
tests/: conftest.py  test_currency.py  test_date_utils.py  test_gains.py  test_ibkr.py  test_interest.py  test_isin_utils.py  test_saxo.py
