[project]
name = "taxes"
version = "0.1.0"
description = "Generator for XML files for Slovenian taxes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=4.9.4",
    "openpyxl>=3.1.2",
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "ruff>=0.9.4",
    "xmlschema>=1.11.0",
    "yfinance>=0.2.52",
]
